2006-08-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frame-separate-io-buffer)
	(gdb-use-separate-io-buffer, menu): Avoid using `inferior' in text.
	(gdb-memory-mode, gdb-locals-watch-map): Don't quote lambda
	expressions.
	(gdb-info-breakpoints-custom): Use gdb-breakpoint-regexp.
	Only search till end of line.
	Add face to function names in case of no filename.
	Add face to variable names of watchpoints.

2006-08-12  Robert Thorpe <rthorpe@realworldtech.com>  (tiny change)

	* cus-start.el <indent-tabs-mode>: Move to the `indent'
	customization group.

2006-08-12  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-prior-bindings, allout-added-bindings):
	Remove, after long deprecation.
	(allout-beginning-of-line-cycles, allout-end-of-line-cycles):
	Add customization vars controlling allout-beginning-of-line and
	allout-end-of-line conveniences.
	(allout-header-prefix, allout-use-mode-specific-leader)
	(allout-use-mode-specific-leader, allout-mode-leaders): Revised
	docstrings.
	(allout-infer-header-lead): Change to be an alias for
	allout-infer-header-lead-and-primary-bullet.
	(allout-infer-header-lead-and-primary-bullet): New version of
	allout-infer-header-lead which assigns the primary bullet to the
	same as the header lead, when its being changed.
	(allout-infer-body-reindent): Apply regexp-quote instead of
	unconditionally prepending "\\", so that all literal
	allout-header-prefix and allout-primary-bullet strings are
	properly handled.
	(allout-add-resumptions): Add optional qualifier for extending or
	appending to existing values, rather than replacing them.
	(allout-view-change-hook): Clarify docstring.
	(allout-exposure-change-hook): Take explicit arguments, via
	run-hook-with-args.
	(allout-structure-added-hook)
	(allout-structure-deleted-hook)
	(allout-structure-shifted-hook): New hooks analogous to
	allout-exposure-change-hook for other kinds of structural outline
	edits.