@@ -99,7 +99,7 @@ the directory " custom-theme-directory "\n\n")
   (widget-insert "  ")
   (widget-create 'push-button
      		 :notify (lambda (&rest ignore)
-			   (when (y-or-n-p "Discard current changes?")
+			   (when (y-or-n-p "Discard current changes? ")
 			     (kill-buffer (current-buffer))
 			     (customize-create-theme)))
      		 "Reset Buffer")
@@ -137,7 +137,7 @@ the directory " custom-theme-directory "\n\n")
   (widget-insert "\n")
   (widget-create 'push-button
      		 :notify (lambda (&rest ignore)
-			   (when (y-or-n-p "Discard current changes?")
+			   (when (y-or-n-p "Discard current changes? ")
 			     (kill-buffer (current-buffer))
 			     (customize-create-theme)))
      		 "Reset Buffer")
@@ -290,7 +290,7 @@ Optional EVENT is the location for the menu."
 (defun custom-theme-visit-theme ()
   (interactive)
   (when (or (null custom-theme-variables)
-	    (if (y-or-n-p "Discard current changes?")
+	    (if (y-or-n-p "Discard current changes? ")
 		(progn (customize-create-theme) t)))
     (let ((theme (call-interactively 'custom-theme-merge-theme)))
       (unless (eq theme 'user)
